--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="main-heading">Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-outline-dark btn-lg down-btn">
+            <button type="button" class="btn btn-dark btn-lg down-btn">
               <i class="fab fa-apple"></i> Download
             </button>
             <button type="button" class="btn btn-outline-light btn-lg down-btn">
