--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="main-heading">Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-ouline-dark btn-lg down-btn">
+            <button type="button" class="btn btn-outline-dark btn-lg down-btn">
               <i class="fab fa-apple"></i> Download
             </button>
             <button type="button" class="btn btn-outline-light btn-lg down-btn">
@@ -241,7 +241,7 @@
 
     <section id="cta">
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button class="btn btn-ouline-dark btn-lg down-btn" type="button">
+      <button class="btn btn-outline-dark btn-lg down-btn" type="button">
         <i class="fab fa-apple"></i> Download
       </button>
       <button class="btn btn-outline-light btn-lg down-btn" type="button">
