--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <title>TinDog</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
 
     <!-- CSS File -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/86c002ee3b.js" crossorigin="anonymous"></script>
@@ -21,7 +19,7 @@
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnEIbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <scriptcsrc="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -70,10 +68,10 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="main-heading">Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-outline-dark btn-lg down-btn">
+            <button type="button" class="btn btn-lg down-btn">
               <i class="fab fa-apple"></i> Download
             </button>
-            <button type="button" class="btn btn-outline-light btn-lg down-btn">
+            <button type="button" class="btn btn-lg down-btn">
               <i class="fab fa-google-play"></i>Download
             </button>
           </div>
@@ -241,10 +239,10 @@
 
     <section id="cta">
       <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button class="btn btn-outline-dark btn-lg down-btn" type="button">
+      <button class="btn btn-lg down-btn" type="button">
         <i class="fab fa-apple"></i> Download
       </button>
-      <button class="btn btn-outline-light btn-lg down-btn" type="button">
+      <button class="btn btn-lg down-btn" type="button">
         <i class="fab fa-google-play"></i> Download
       </button>
     </section>
