--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="main-heading">Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-lg down-btn" style="color: black">
+            <button type="button" class="btn btn-lg down-btn">
               <i class="fab fa-apple"></i> Download
             </button>
             <button type="button" class="btn btn-lg down-btn">
