--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>TinDog</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
     <!-- CSS File -->
     <link rel="stylesheet" href="css/styles.css">
@@ -15,21 +18,16 @@
 
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/86c002ee3b.js" crossorigin="anonymous"></script>
-
-    <!-- Bootstrap -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnEIbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </head>
 
   <body>
-    <section id="title">
+    <section class="colored-section" id="title">
       <!-- Container 1 -->
 
       <div class="container-fluid">
         <!-- Nav Bar -->
 
-        <nav class="navbar navbar-expand-md navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
           <a class="navbar-brand" href="">tinDog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -51,13 +49,16 @@
                 </div>
               </li> -->
               <li class="nav-item">
-                <a href="#cta" class="nav-link"> Download</a>
+                <a href="#features" class="nav-link"> Features</a>
+              </li>
+              <li class="nav-item">
+                <a href="#testimonials" class="nav-link"> Testimonials</a>
               </li>
               <li class="nav-item">
                 <a href="#pricing" class="nav-link"> Pricing</a>
               </li>
               <li class="nav-item">
-                <a href="#footer" class="nav-link">Contact/Help</a>
+                <a href="#cta" class="nav-link">Contact/Help</a>
               </li>
             </ul>
           </div>
@@ -88,31 +89,31 @@
 
     <!-- Features -->
 
-    <section id="features">
-      <div class="row">
+    <section class="white-section" id="features">
+      <div class="row container-fluid">
         <div class="col-md-4">
           <i class="fas fa-check-circle fa-4x" id="fi"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="features-title">Easy to use.</h3>
           <p id="fp">So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="col-md-4">
           <i class="fas fa-bullseye fa-4x" id="fi"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="features-title">Elite Clientele</h3>
           <p id="fp">We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="col-md-4">
           <i class="fas fa-heart fa-4x" id="fi"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="features-title">Guaranteed to work.</h3>
           <p id="fp">Find the love of your dog's life or your money back.</p>
         </div>
-      </div>
+        </div>
     </section>
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section class="colored-section" id="testimonials">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-keyboard="true" data-pause="hover">
         <ol class="carousel-indicators">
           <li data-target="#carasouelExampleIndicators" data-slide-to="0" class="active"></li>
@@ -120,29 +121,21 @@
         </ol>
 
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <h2>
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
             </h2>
-            <img
-              class="testic-img"
-              src="images/dog-img.jpg "
-              alt="dog-profile "
-            />
+            <img class="testic-img" src="images/dog-img.jpg" alt="dog-profile"/>
             <em>Pebbles, New York</em>
           </div>
 
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">
               My dog used to be so lonely, but with TinDog's help, they've found
               the love of their life. I think.
             </h2>
-            <img
-              class="testic-img"
-              src="images/lady-img.jpg "
-              alt="lady-profile "
-            />
+            <img class="testic-img" src="images/lady-img.jpg" alt="lady-profile"/>
             <em>Beverly, Illinois</em>
           </div>
         </div>
@@ -161,7 +154,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section class="colored-section" id="press">
       <img id="press-logo" src="images/techcrunch.png " alt="tc-logo " />
       <img id="press-logo" src="images/tnw.png " alt="tnw-logo " />
       <img
@@ -174,8 +167,8 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
+    <section class="white-section" id="pricing">
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <!-- pricing style -->
@@ -184,14 +177,14 @@
         <div class="pricing-col col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Chihuahua</h3>
+              <h3 class="plan-title">Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>$29 / mo</h2>
+              <h2 class="price-heading">$29 / mo</h2>
               <p>20 Matches Per Day</p>
               <p>500 Messages Per Day</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-large btn-block btn-outline-dark" type="button">
+              <button class="btn btn-large btn-block btn-outline-dark shade" type="button">
                 Sign Up
               </button>
             </div>
@@ -201,14 +194,14 @@
         <div class="pricing-col col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Labrador</h3>
+              <h3 class="plan-title">Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="price-heading">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-large btn-block btn-outline-dark" type="button ">
+              <button class="btn btn-large btn-block btn-outline-dark shade" type="button ">
                 Sign Up
               </button>
             </div>
@@ -218,15 +211,15 @@
         <div class="pricing-col col-lg-4 col-sm-12">
           <div class="card">
             <div class="card-header">
-              <h3>Mastiff</h3>
+              <h3 class="plan-title">Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="price-heading">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-large btn-block btn-outline-dark" type="button ">
+              <button class="btn btn-large btn-block btn-outline-dark shade" type="button ">
                 Sign Up
               </button>
             </div>
@@ -237,20 +230,23 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <section class="colored-section" id="cta">
+      <div class="container-fluid">
+      <h3 class="main-heading" style="color: #912a2e;">Find the True Love of Your Dog's Life Today.</h3>
       <button class="btn btn-lg down-btn" type="button">
         <i class="fab fa-apple"></i> Download
       </button>
       <button class="btn btn-lg down-btn" type="button">
         <i class="fab fa-google-play"></i> Download
       </button>
+      </div>
     </section>
 
     <!-- Footer -->
 
     <footer>
-      <div id="footer">
+    <section class="white-section" id="footer">
+      <div id="container-fluid">
 
         <div class="icons">
             <i class="fab fa-instagram fa-1.5x"></i>
@@ -263,9 +259,10 @@
         </div>
         <div class="icons">
           <i class="far fa-envelope fa-1.5x"></i>
+        </div>
+        <p style="font-size: larger;">© Copyright 2021 TinDog</p>
       </div>
-      <p style="font-size: larger;">© Copyright 2021 TinDog</p>
-    </div>
+    </section>
     </footer>
   </body>
 </html>
